# tomlscript

./: .coverage  README.md  pyproject.toml
.github/workflows/: ci.yml
src/tomlscript/: main.py  parser.py
src/xrun/: __init__.py  main.py  parser.py
tests/: test_main.py  test_parser.py  test_readme.py
