[project]
name = "xrun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["tomli>=1; python_version<'3.11'"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
xrun = "xrun.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ipykernel>=6.29.5",
    "ruff>=0.6.9",
    "inline-snapshot>=0.13.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "--cov src --cov-branch --cov-report term --cov-report html --basetemp=local"

[tool.xrun]
source = """
# Build and render documentation
function doc() {
    echo "Rendering documentation..."
}

# Rebuild docker image
function docker_build() {
    echo "Building Docker image..."
}

function say() {
    echo "$1"
}
"""

# Say something nice
foo = 'say'
